# my_tracker

./: .claudeignore  .gitignore  .gitmodules  CMakeLists.txt
docs/plans/history/: IMPLEMENTATION_PLAN_VST_AU.md
src/: Arrangement.h  ArrangementComponent.cpp  ArrangementComponent.h  Clipboard.h  FormatUtils.h  InstrumentEffectsPlugin.cpp  InstrumentEffectsPlugin.h  InstrumentPanel.cpp  InstrumentPanel.h  InstrumentParams.h  Main.cpp  MainComponent.cpp  MainComponent.h  NoteUtils.h  PatternData.cpp  ProjectSerializer.cpp  ProjectSerializer.h  SampleEditorComponent.cpp  SampleEditorComponent.h  SimpleSampler.cpp  SimpleSampler.h  TabBarComponent.h  ToolbarComponent.cpp  ToolbarComponent.h  TrackLayout.h  TrackerEngine.cpp  TrackerEngine.h  TrackerGrid.cpp  TrackerGrid.h  TrackerLookAndFeel.cpp  TrackerLookAndFeel.h
src/audio/: ChannelStripPlugin.cpp  ChannelStripPlugin.h  DspUtils.h  FxParamTransport.h  InsertPluginManager.cpp  InsertPluginManager.h  InstrumentEffectsPlugin.cpp  InstrumentEffectsPlugin.h  InstrumentRouting.h  LoopRegion.h  MetronomePlugin.cpp  MetronomePlugin.h  MixerPlugin.cpp  MixerPlugin.h  ModulationEngine.cpp  ModulationEngine.h  PanMapping.h  PatternMidiBuilder.cpp  PatternMidiBuilder.h  PluginAutomationManager.cpp  PluginAutomationManager.h  PluginCatalogService.cpp  PluginCatalogService.h  PluginValidator.c  PreviewManager.cpp  PreviewManager.h  SamplePlaybackLayout.h  SendBuffers.h  SendEffectsPlugin.cpp  SendEffectsPlugin.h  SimpleSampler.cpp  SimpleSampler.h  TrackOutputPlugin.cpp  TrackOutputPlugin.h  TrackerEngine.cpp  TrackerEngine.h  TrackerFxState.h  TrackerSamplerPlugin.cpp  TrackerSamplerPlugin.h  TransientDetector.h
src/data/: Arrangement.h  Clipboard.h  FeatureFlags.h  GlobalPreferences.cpp  GlobalPreferences.h  InstrumentParamNames.h  InstrumentParams.h  InstrumentParamsSerializer.cpp  InstrumentParamsSerializer.h  InstrumentSlotInfo.h  MixerState.h  MixerStateSerializer.cpp  MixerStateSerializer.h  PatternData.cpp  PatternData.h  PatternSerializer.cpp  PatternSerializer.h  PluginAutomationData.h  SendEffectsParams.h  TrackLayout.h  TrackLayoutSerializer.cpp  TrackLayoutSerializer.h
src/ui/: ArrangementComponent.cpp  ArrangementComponent.h  AudioPluginSettingsComponent.cpp  AudioPluginSettingsComponent.h  AutomationCoordinateMapper.h  AutomationPointEditor.h  FileBrowserComponent.cpp  FileBrowserComponent.h  InstrumentPanel.cpp  InstrumentPanel.h  MainComponent.cpp  MainComponent.h  MixerComponent.cpp  MixerComponent.h  MixerHitTest.cpp  MixerHitTest.h  MixerNavigation.h  MixerParamModel.cpp  MixerParamModel.h  MixerStripPainter.cpp  MixerStripPainter.h  PatternEditUtils.h  PluginAutomationComponent.cpp  PluginAutomationComponent.h  PluginInstrumentEditorContent.cpp  PluginInstrumentEditorContent.h  ProjectSerializer.cpp  ProjectSerializer.h  SampleEditorComponent.cpp  SampleEditorComponent.h  SendEffectsComponent.cpp  SendEffectsComponent.h  TabBarComponent.cpp  TabBarComponent.h  ToolbarComponent.cpp  ToolbarComponent.h  TrackerDrawingUtils.h  TrackerGrid.cpp  TrackerGrid.h  TrackerLookAndFeel.h  (+2 more)
tests/: TrackerAdjustTests.cpp
